# HoloBro-P2P

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  holochain-sidecars.manifest.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docker/: rust-check.Dockerfile
docs/: HOLOBRO_CHAT_KEYS_SPIKE.md  HOLOBRO_DATA_CLASSES.md  HOLOBRO_HOLOCHAIN_SURFACE.md  HOLOBRO_PRIVACY_OPERATORS.md  HOLOBRO_RELEASE_AND_SECURITY_ROADMAP.md  HOLOBRO_YOUR_KEYS.md
scripts/: check-wsl-toolchain.sh  fetch-holochain-sidecars.mjs  tauri-build-tier.mjs  wsl-build-zomes.sh  wsl-pack-dna.sh  wsl-pack-happ.sh
src/: App.css  App.tsx  holochain.ts  holochainConnect.test.ts  holochainConnect.ts  main.tsx  vite-env.d.ts  webrtc.ts
src-tauri/: Cargo.toml  tauri.bundle-happ.conf.json  tauri.bundle-holochain.conf.json  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: bundled_sandbox.rs  holochain_sidecar.rs  irc_tools.rs  lib.rs  main.rs  network_tools.rs
src/app/: AppShell.tsx  lazyPanels.tsx  types.ts
src/archive/: AppShell.tsx
src/assistant/: AssistantPanel.tsx
src/browser/: BrowserPanel.tsx  browserSettings.ts
src/components/: ContactForm.tsx  HoloBroLogo.tsx  HoloBroMascot.tsx  HoloBroMiniSprite.tsx  HoloBroWanderer.tsx  HolochainEmptyHint.tsx  RootErrorBoundary.tsx  StreetTags.tsx  WelcomeSafetyModal.tsx  shell.tsx  ui.tsx
src/constants/: index.ts
src/design-panels/: AgentHub.tsx  index.tsx
src/hooks/: index.ts
src/irc/: IrcDockPanel.tsx
src/lib/: agentApi.ts  alertSounds.ts  bookmarkEnvelope.test.ts  bookmarkEnvelope.ts  chatCrypto.ts  docLinks.ts  holoMirror.test.ts  holoMirror.ts  normalizeUrl.ts  (+9 more)
workdir/: happ.yaml
(+28 files in other folders)
