[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
  "src-tauri",
  "dnas/anon_browser/zomes/integrity/anon_browser_integrity",
  "dnas/anon_browser/zomes/coordinator/anon_browser",
]
resolver = "2"

[workspace.dependencies]
hdi = "=0.7.0"
hdk = "=0.6.0"
serde = "1.0"
holochain_serialized_bytes = "0.0.56"
