[package]
name = "holobro"
version = "0.1.0"
description = "HoloBro — Tauri + Holochain browser shell"
authors = ["HoloBro contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "holobro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "io-util", "sync"] }
if-addrs = "0.13"
hostname = "0.4"
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "system-config"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

